# uzorci-projekt

./: .gitignore  INRIA i baza.docx  Prezentacija-uzorci.pptx  README.md  bibliografija.bib  bibtex-check.py  dokumentacija.tex  fer.cls  prezentacija-glavna.pptx  prezentacija.tex  radovi
src/: CMakeLists.txt  classify.cpp  export-asan  export_asan  read.cpp  read.h  svmModel2.xml  test.cpp  train  train.cpp
src/data/: blocks_scores  hvip  tvip
src/hogcolor/: CMakeLists.txt  HOGAndColorFeatures.cpp  HOGAndColorFeatures.h  HOGBlock.h
src/pls/: CMakeLists.txt  Main  Makefile  Storage.cpp  base64.cpp  cmake_install.cmake  encoding.cpp  headers.h  main.cpp  maths.cpp  maths.h  model.cpp  model.h  pls.cpp  pls.h  plsanje.cpp  plsanje.h  storage.h  write_matrix.m
src/texture/: CMakeLists.txt  TextBlock.cpp  TextBlock.h  TextFeatures.cpp  TextFeatures.h
